# sphinx-flyout

./: .gitignore  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ruff_mypy_check.yaml
flyout_multiversion/: __init__.py  __main__.py  _sphinx.py  flyout_menu.py  git.py  main.py
flyout_multiversion/_templates/: versions.html
sphinx_flyout/: __init__.py
templates/: layout.html  versions.html
tests/: test_flyout_multiversion_git.py  test_flyout_multiversion_main.py
